Fix out of place labels from radio buttons

--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,7 @@ input {
   margin-bottom: 15px;
 }
 
-.form-input-section label {
+.form-input-section > p > label {
   flex: 1;
   display: flex;
   align-items: center;
@@ -125,5 +125,18 @@ input {
 /* RIGHT SECTION */
 
 .right-section {
+  padding: 25px;
   flex: 3;
+}
+
+.library-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  gap: 20px;
+}
+
+.book-card {
+  border: 2px solid black;
+  padding: 10px;
+  height: 250px;
 }
